# multi-agent-rag

./: .env.example  .gitignore  README.md  UV_GUIDE.md  mcp.json  pyproject.toml  run.py
app/: main.py
app/api/v1/routers/: chatbot.py  index.py
app/core/: config.py  exceptions.py  logging.py
app/database/: __init__.py  milvus_config.py  mysql_config.py
app/llms/: __init__.py
app/llms/agents/chatbot/: __init__.py  aggregator_agent.py  ingestion_pipeline.py  knowledge_base_initializer.py  memory_manager.py  specialist_agents.py
app/llms/agents/tools/: __init__.py  mcp_tool.py
app/llms/core/: __init__.py  query_engine.py  rag_engine.py
app/llms/core/mcp/: __init__.py  mcp_client.py  mcp_server.py  test_mcp.py
app/models/: __init__.py  check_milvus_data.py  clear_milvus_data.py  create_tables.py  database_schema.py
app/services/: __init__.py  milvus_service.py  redis_service.py  searxng_service.py
app/utils/: __init__.py  ingest.py
data/knowledge_base/: PERMENHAN-NOMOR-30-TAHUN-2019-TENTANG-ADMINISTRASI-UMUM-DI-LINGKUNGAN-KEMENTERIAN-PERTAHANAN.md
scratch/: MCP_TESTING_GUIDE.md  langkah_langkah_agent_aggr.md  langkah_langkah_agent_local.md  langkah_langkah_agent_rag.md  langkah_langkah_agent_search.md  langkah_langkah_mcp.md  langkah_langkah_summary.md  multi_agent_rag.md  ollama-langchain.md  requirement.md  respons_konteks.md
tests/: check_milvus_data.py  check_mysql_data.py  test_local_agent.py  test_search_agent.py
